Correction du type d'icône et mise à jour du chemin d'accès dans index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="comymedia.jpg" />
+    <link rel="icon" type="image/jpeg" href="/comymedia.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Gestion des besoins d'affichage pour Comymedia" />
     <meta name="theme-color" content="#ffffff" />
